Fixing image issue on mobile screen size
Images were not displaying - Updated the media query rule

--- a/scss/components/_faq.scss
+++ b/scss/components/_faq.scss
@@ -88,7 +88,7 @@ footer {
     -moz-transform: translate(-55%, -228%);
     -webkit-transform: translate(-55%, -228%);
     -o-transform: translate(-55%, -228%);
-    @media (min-width: 767px) {
+    @media (max-width: 768px) {
         display: none;
     }
 }
@@ -102,7 +102,7 @@ footer {
     -moz-transform: translate(-50%, -325%);
     -webkit-transform: translate(-50%, -325%);
     -o-transform: translate(-50%, -325%);
-    @media (min-width: 767px) {
+    @media (max-width: 768px) {
         display: none;
     }
 }
